--- a/static/css/base_master.css
+++ b/static/css/base_master.css
@@ -253,6 +253,46 @@ nav .nav-item a.nav-link:hover {
   transform: translate3d(-45px, 53px, 0px)!important;
 }
 
+.bg-hover-white,
+.bg-hover-white:hover,
+.bg-hover-white .dropdown-menu-mobile-search,
+.bg-hover-white:hover .dropdown-menu-mobile-search {
+  background: #efefef !important;
+}
+
+.bg-hover-white form input,
+.bg-hover-white:hover form input,
+.bg-hover-white .navbar-toggler {
+  background-color: #efefef !important;
+}
+
+.bg-hover-white form button,
+.bg-hover-white:hover form button,
+.bg-hover-white .dropdown-menu-mobile-search form button,
+.bg-hover-white:hover .dropdown-menu-mobile-search form button {
+  color: #efefef !important;
+}
+
+.bg-hover-white.fixed-top,
+.bg-hover-white:hover.fixed-top,
+.bg-hover-white.fixed-top .dropdown-menu-mobile-search,
+.bg-hover-white:hover.fixed-top .dropdown-menu-mobile-search {
+  background: #fafafa !important;
+}
+
+.bg-hover-white.fixed-top form input,
+.bg-hover-white:hover.fixed-top form input,
+.bg-hover-white.fixed-top .navbar-toggler {
+  background-color: #fafafa !important;
+}
+
+.bg-hover-white.fixed-top form button,
+.bg-hover-white:hover.fixed-top form button,
+.bg-hover-white.fixed-top .dropdown-menu-mobile-search form button,
+.bg-hover-white:hover.fixed-top .dropdown-menu-mobile-search form button {
+  color: #fafafa !important;
+}
+
 /* ------------------------------- hero image */
 .shop-now-button {
   background: black;
